# ARchitecture

./: CMakeLists.txt  DrawPrimitives.h  LICENSE  README.md  Test  makefile  output  packages.txt  test.cpp
Testing/: DrawPrimitives.h  marker_detection.cpp  rotating_cube.cpp
src/: MarkerDetection.cpp  MarkerDetection.h  ObjFormat.h  ObjRenderer.cpp  ObjectRender.cpp  ObjectRender.h  main.cpp
test/: CMakeLists.txt  Makefile  marker_detection.cpp  scratchwall.txt
